k8s/jellyseerr/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyseerr
  labels:
    name: jellyseerr
