k8s/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app: jellyseerr
    kubernetes.io/name: "jellyseerr"
spec:
  type: NodePort
  ports:
    - name: jellyseerr
      port: 5055
      targetPort: 5055
      nodePort: 30017
  selector:
    app: jellyseerr
